# orcaslicer-wasm

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  QUICK-START-SCHEMA.md  README.md  SECURITY.md  TRANSLATION-GUIDE.md  build.ps1  setup.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/prompts/: key files.prompt.md  master.prompt.md
.github/workflows/: ci.yml  release-wasm.yml  update-orca.yml
bridge/: CMakeLists.txt  wasm_wrap.cpp  wasm_wrap.h
docs/: PROFILE-IMPLEMENTATION-SUMMARY.md  PROFILE-LIBRARY-PLAN.md  PROFILE-MANUAL-TUNING.md  PROFILE-STORAGE-STRATEGY.md  PROFILE-UI-COMPONENTS.md
patches/: orca-wasm.patch
scripts/: build-wasm.sh  dev-web.sh  dump-bytes.js  extract-profiles.js  extract-schema.js  find-bytes.js  sanity.sh  setup.sh  test-slicer.js
wasm/: CMakeLists.txt  LICENSE.txt  README.md  build.sh  shim_map.yaml
wasm/cmake/: FindBoost.cmake  FindCGAL.cmake  FindCURL.cmake  FindEXPAT.cmake  FindEigen3.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGMP.cmake  FindJPEG.cmake  FindMPFR.cmake  FindNLopt.cmake  FindOpenCASCADE.cmake  FindOpenCV.cmake  FindOpenSSL.cmake  FindOpenVDB.cmake  FindPNG.cmake  FindTBB.cmake  FindThreads.cmake  FindZLIB.cmake  Findcereal.cmake  Findglfw3.cmake  Findlibnoise.cmake
wasm/toolchain/: emsdk.env
wasm/wasm_shims/: expat.h  jerror.h  jpeglib.h  nlopt.h  nlopt.hpp  png.h
wasm/wasm_shims/CGAL/: Exact_predicates_inexact_constructions_kernel.h
wasm/wasm_shims/CGAL/GMP/: Gmpzf_type.h
wasm/wasm_shims/boost/: format.hpp  optional.hpp
wasm/wasm_shims/boost/format/: format_fwd.hpp
wasm/wasm_shims/boost/log/: trivial.hpp
wasm/wasm_shims/boost_runtime/boost/: thread.hpp
wasm/wasm_shims/boost_runtime/boost/asio/detail/: signal_blocker.hpp
wasm/wasm_shims/boost_runtime/boost/log/: trivial.hpp
wasm/wasm_shims/boost_runtime/boost/system/: error_code.hpp
wasm/wasm_shims/boost_runtime/boost/thread/: thread_group.hpp
wasm/wasm_shims/cereal/: access.hpp  cereal.hpp
wasm/wasm_shims/cereal/archives/: binary.hpp
wasm/wasm_shims/cereal/types/: base_class.hpp  optional.hpp  polymorphic.hpp  string.hpp  vector.hpp
wasm/wasm_shims/igl/: Hit.h
wasm/wasm_shims/libnoise/: noise.h
wasm/wasm_shims/libslic3r/: libslic3r_version.h
wasm/wasm_shims/oneapi/tbb/: blocked_range.h  concurrent_unordered_map.h  concurrent_vector.h  parallel_for.h  scalable_allocator.h  spin_mutex.h  tbb.h
wasm/wasm_shims/openssl/: md5.h
wasm/wasm_shims/openvdb/: openvdb.h
wasm/wasm_shims/tbb/: blocked_range.h  blocked_range2d.h  concurrent_unordered_map.h  concurrent_unordered_set.h  concurrent_vector.h  global_control.h  mutex.h  parallel_for.h  parallel_for_each.h  parallel_pipeline.h  parallel_reduce.h  pipeline.h  scalable_allocator.h  spin_mutex.h  task_arena.h  task_group.h  task_scheduler_init.h  tbb.h  version.h
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  test-wasm.html  tsconfig.json  vite.config.ts
web/public/: profiles.json  schema.json
web/public/profiles/: index.json
web/public/profiles/popular/: Anycubic.json  Artillery.json  BBL.json  Creality.json  Elegoo.json  Geeetech.json  Kingroon.json  Prusa.json  Snapmaker.json  Sovol.json  Tronxy.json  TwoTrees.json  Voron.json  Wanhao.json
web/public/wasm/: config-schema.json  default-profile.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: CollapsibleSection.tsx  Icons.tsx
web/src/config/: schema-map.ts  schema-translation.ts  schemaBuilder.ts
web/src/hooks/: useOrcaSchema.ts  useProfiles.ts
web/src/lib/: auto-orient.ts  profile-loader.ts  slice-api.ts
web/src/viewer/: Viewport3D.tsx
web/src/workers/: slicer.worker.ts
